# loss-traces-defenses

./: .gitignore  HOWTO.md  README.md  README_PIPELINE.md  attacks.py  main.py  plot_style.mplstyle  pyproject.toml  requirements.txt  run_attack_pipeline.py  spearman.ipynb  stability_lira.ipynb  stability_target_model.ipynb  trainer.py
attacks/: attack_r.py  lira.py  new_attacks.py
data_processing/: custom_dataset.py  data_processing.py
models/: model.py  resnet_cifar.py  wide_resnet.py
notebooks/: additional_setups.ipynb  cluster_removal.ipynb  dp.ipynb  dp2.ipynb  iter_removal.ipynb  kd.ipynb  layer_overlap.ipynb  main_results.ipynb  mias.ipynb  play2.ipynb  play3.ipynb  play4.ipynb  play5.ipynb  plots copy.ipynb  plots.ipynb  privacy_onion.ipynb  spearman.ipynb  stability_lira.ipynb  stability_target_model.ipynb
results/: final_model_metrics.py  plots.ipynb  result_processing.py  utils.py
scripts/: attack_r.sh  cifar_top2_removal_experiments.sh  cifar_top5_removal_experiments.sh  enhanced_dp_sgd.sh  random_removal_experiments.sh  selective_clipping_experiments.sh  standard_clipping_experiments.sh  standard_dp_sgd.sh  walkthrough.sh
src/loss_traces/: attacks.py  augmult_utils.py  config.py  get_noise.py  main.py  run_attack_pipeline.py  trainer.py  trainer_OLD.py
src/loss_traces/data_processing/: custom_dataset.py  data_processing.py  ffcv.py
src/loss_traces/models/: model.py  resnet_cifar.py  simple_convnet.py
src/loss_traces/results/: final_model_metrics.py  result_processing.py  (+1 more)
src/privacy_onion/: get_epsilon.py  kd_filter.py  layer_utils.py
(+21 files in other folders)
